# skagit60

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  docker-compose.yml  goaccess.conf  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  vps_launch_script
example_env/: .env  .env.docker  NGINX_API_KEY_EXAMPLE.txt
nginx/: Dockerfile  nginx.conf  start.sh
nginx/conf.d/: nginx.conf
skagit60/: asgi.py  settings.py  urls.py  wsgi.py
static/: ImageUploader.js  main.css
staticfiles/: empty.txt
templates/: 404.html  base.html  report.html
templates/registration/: account_activation_email.html  account_activation_email.txt  account_activation_sent.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt  signup.html
templates/tracker/: about.html  home.html  leaderboard.html  map.html  peak_detail.html  tick_confirm_delete.html  tick_create.html  trip_reports.html  tripreport_confirm_delete.html  tripreport_create.html  tripreport_detail.html  tripreport_form.html
templates/users/: edit_profile.html  profile.html
tests/: factories.py
tests/tracker/: test_models.py  test_urls.py  test_views.py  test_with_client.py
tracker/: admin.py  forms.py  models.py  urls.py  views.py
tracker/migrations/: 0001_initial.py  (+11 more)
users/: email_auth.py  forms.py  models.py  tokens.py  urls.py  views.py
(+14 files in other folders)
