[tool.poetry]
name = "skagit60"
version = "0.1.0"
description = "MIT"
authors = ["Your Name <you@example.com>"]
license = "A site for tracking trip reports."

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
django-cleanup = "^6.0.0"
django-crispy-forms = "^1.14.0"
djangorestframework = "^3.13.1"
pandas = "^1.4.1"
dj-database-url = "^0.5.0"
whitenoise = "^6.0.0"
boto3 = "^1.21.32"
django-storages = "^1.12.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-django = "^4.5.2"
pytest-xdist = "^2.5.0"
factory-boy = "^3.2.1"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "skagit60.settings"
